--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,8 @@
 name: Hello World
 on:
   push:
-    branches: [ "main" ]
+    branches:  
+      - main 
 jobs:
   first_githubactions_job:
     runs-on: ubuntu-latest
