--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ on:
     branches:  
       - main 
   pull_request:
-    branches: [main]
+    branches: [ "main" ]
   workflow_dispatch
 jobs:
   first_githubactions_job:
